Hopefully fixed off centered rareroom logo on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -121,8 +121,8 @@ main > div > span > span > img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  min-width: none;
-  min-height: none;
+  min-width: 0;
+  min-height: 0;
   max-width: 100vw;
   max-height: 100vh;
 }
@@ -196,7 +196,7 @@ main > div #content ul a svg {
 
 main > div > span {
   width: max-content;
-  min-width: none;
+  min-width: 0;
 }
 
 main > div > span > span.morse {
